# MusclesInTime

./: .gitignore  MANIFEST.in  README.md  pyproject.toml  readme_update.md  setup.py
musint/benchmarks/: muscle_sets.py
musint/datasets/: amass_dataset.py  babel_dataset.py  mint_dataset.py
musint/muscle_groups/: lu_muscle_groups.py  tl_muscle_groups.py
musint/tests/: mint_dataset.py
musint/utils/: dataframe_utils.py  metadata_utils.py
musint/utils/hml3d_utils/: humanml3d_utils.py  paramUtil.py
musint/utils/hml3d_utils/common/: skeleton.py
notebooks/: amass_utils.py  mia_utils.py  plotting_utils.py  visu_mia.ipynb  visu_mint.ipynb
notebooks/body_models/: body_model.py  lbs.py
